fix no tooltip on small browser width

--- a/src/chartOptions.scss
+++ b/src/chartOptions.scss
@@ -77,6 +77,7 @@
        box-shadow: none;
        border-radius: 0;
        border: none;
+       display: block !important;
     }
     &.indicators {
        width: 100%;
